# wsapi-python

./: README.md
src/: .gitignore  pyproject.toml
src/wsapi_client/: __init__.py  client.py  exceptions.py  http.py
src/wsapi_client/api/: calls.py  chats.py  contacts.py  groups.py  instance.py  media.py  messages.py  session.py  users.py
src/wsapi_client/events/: factory.py
src/wsapi_client/models/: problem_details.py
src/wsapi_client/models/entities/chats/: chat_archive.py  chat_ephemeral.py  chat_info.py  chat_mute.py  chat_pin.py  chat_read.py
src/wsapi_client/models/entities/contacts/: contact_business_profile.py  contact_info.py  contact_picture.py
src/wsapi_client/models/entities/groups/: group_info.py
src/wsapi_client/models/entities/instance/: __init__.py  instance_settings.py
src/wsapi_client/models/entities/messages/: __init__.py  message_contact.py  message_created.py  message_edit.py  message_extended_text.py  message_media.py  message_pin.py  message_reaction.py  message_reply_to.py
src/wsapi_client/models/entities/session/: session_pair_code.py  session_status.py
src/wsapi_client/models/entities/users/: sender.py  user_info.py
src/wsapi_client/models/events/: base_event.py
src/wsapi_client/models/events/calls/: call_accept_event.py  call_offer_event.py  call_terminate_event.py
src/wsapi_client/models/events/chats/: chat_presence_event.py  chat_setting_event.py
src/wsapi_client/models/events/contacts/: contact_event.py
src/wsapi_client/models/events/messages/: message_delete_event.py  (+4 more)
src/wsapi_client/sse/: client.py
(+26 files in other folders)
