[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wsapi-client"
version = "1.0.0"
description = "Python SDK for WSApi: send messages, manage chats/groups, and receive events via webhooks or SSE."
readme = "../README.md"
license = { text = "MIT" }
authors = [{ name = "WSApi" }]
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/wsapi-chat/wsapi-python"
Repository = "https://github.com/wsapi-chat/wsapi-python"

[tool.hatch.build]
packages = ["wsapi_client"]

[tool.hatch.build.targets.wheel]
packages = ["wsapi_client"]
